# kerod

./: .codecov.yml  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  MAINTAINERS  Makefile  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  doc.yml
CONTRIBUTING/: index.html
docs/: BENCHMARKS.md
docs/BENCHMARKS/: index.html
notebooks/: coco_training.ipynb  coco_training_multi_gpu.ipynb  detr_coco_training_multi_gpu.ipynb  mixed_precision_pascal_voc_training_fpn50.ipynb  overfit-detr.ipynb  pascal_voc_training_fpn50.ipynb  smca_coco_training_multi_gpu.ipynb
reference/kerod/: index.html
reference/kerod/core/: index.html
reference/kerod/dataset/: index.html
reference/kerod/layers/: index.html
reference/kerod/model/: index.html
reference/kerod/utils/: index.html
search/: search_index.json
src/kerod/model/: detr.py  (+4 more)
src/od/: learning_rate_schedule.py
tests/: test_learning_rate_schedule.py
tests/core/: test_anchor_generator.py  test_argmax_matcher.py  test_box_coder.py  test_box_ops.py  test_learning_rate_schedule.py  test_losses.py  test_matcher.py  test_sampling_ops.py  test_similarity.py  test_target_assigner.py
tests/dataset/: test_augmentation.py  test_preprocessing.py  test_utils.py
tests/layers/: test_anchors.py  test_attentions.py  test_patches.py  test_positional_encoding.py  test_transformer.py
tests/model/: test_detr.py  test_factory.py  test_faster_rcnn.py  test_smca_detr.py
tests/utils/: test_drawing.py  test_ops.py
(+154 files in other folders)
