[metadata]
name = od
version = 0.1
description = Algorithm for Object  Detection using tensorflow.
long_description = file: README.md
author = Emilien Garreau
author_email = emilien.garreau@gmail.com
url = https://github.com/EmGarr/od

[options]
python_requires = >=3.6
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
